# crm_react_fastapi

./: README.md
crm_backend/: .env.test  .flake8  .gitignore  Makefile  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml
crm_backend/src/: create_app.py
crm_backend/src/alembic/versions/: 2025_09_01_1706-783d5f75107f_create_tg_user_table.py  2025_09_04_1344-72d4af6a294b_added_the_is_active_column_to_the_tg_.py  2025_10_20_1926-0c5a16686def_updated_the_phone_number_column_in_the_.py  2025_10_22_1811-521a5f542737_updated_the_telegram_id_column_in_the_.py  2025_10_31_1605-1d1fddd6e93f_rename_two_column_with_booking_table.py
crm_backend/src/api/: __init__.py
crm_backend/src/api/booking/: views.py
crm_backend/src/api/employees/: views.py
crm_backend/src/api/services/: views.py
crm_backend/src/api/tg_users/: views.py
crm_backend/src/core/: config.py  error_handlers.py
crm_backend/src/core/dependencies/: authorization.py
crm_backend/src/core/utils/: query_filters.py
crm_backend/src/infrastructure/: __init__.py
crm_backend/src/infrastructure/db/models/: booking.py  employee.py  service.py  tg_user.py  tg_users.py  users.py
crm_backend/src/infrastructure/fs_broker/: __init__.py  broker.py
crm_backend/src/infrastructure/fs_broker/router/: booking_fouter.py  booking_router.py  tg_user_router.py
crm_backend/src/infrastructure/repositories/: booking_repository.py  service_repository.py  tg_user_repository.py
crm_backend/src/schemas/: base_schema.py  booking_schema.py  employee_shemas.py  service_shemas.py  user_schema.py
crm_backend/src/services/: base_service.py  booking_service.py  category_service.py  employee_service.py  positiion_service.py  service_service.py  tg_user_service.py  user_service.py
crm_backend/tests/: utils.py
crm_backend/tests/data_fixtures/: category.py  emps.py  positions.py  service.py  users.py
crm_backend/tests/integration/: conftest.py  test_emp.py  test_user.py
crm_backend/tests/integration/api/: test_emp.py  test_user.py
crm_backend/tests/integration/broker/: conftest.py  test_tg_user.py
crm_backend/tests/integration/repo/: conftest.py  test_booking_repo.py  test_category_repo.py  test_emp_repo.py  test_position_repo.py  test_service_repo.py  test_user_repo.py
crm_backend/tests/unit/: test_security.py
crm_bot/: .env.test  docker-compose.yaml  pyproject.toml
crm_bot/src/: create_bot.py  main.py
crm_bot/src/core/: __init__.py  base_client.py  config.py  entities.py  service_api.py  states.py
crm_bot/src/core/decorations/: retry_deco.py
crm_bot/src/core/dependencies/: authorization.py
crm_bot/src/core/keyboards/: entities.py  inline_fabrics.py  keyboard_btns.py
crm_bot/src/core/midd/: __init__.py  register_user.py
crm_bot/src/core/utils/: mappers.py
crm_bot/src/dtos/: dto.py
crm_bot/src/handlers/: booking.py  start.py
crm_bot/src/infrastructure/: __init__.py  container.py
crm_bot/src/infrastructure/fs_broker/: broker.py
crm_bot/src/infrastructure/redis_client/: client.py
crm_bot/src/services/: cache_service.py  service_api.py
crm_bot/tests/: conftest.py  test_booking.py
crm_front/: package-lock.json  (+1 more)
(+2 files in other folders)
