[project]
name = "crm-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "_Avvake_",email = "denisergo18@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi[all] (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "pydantic-settings (>=2.9.1,<2.10.0)",
    "sqlalchemy (>=2.0.41,<2.1.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic (>=1.16.1,<1.17.0)",
    "greenlet (>=3.2.3,<3.3.0)",
    "python-jose (>=3.5.0,<3.6.0)",
    "bcrypt (>=4.3.0,<4.4.0)",
    "faststream[rabbit] (>=0.5.48,<0.6.0)",
]


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pytest = "^8.4.0"
pytest-asyncio = "^1.0.0"
asgi-lifespan = "^2.1.0"
flake8-pyproject = "^1.2.4"

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "venv",
    "src/alembic",
    "migrations"
]
per-file-ignores = [
    "__init__.py:F401"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
