[project]
name = "crm-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "_Avvake_",email = "denisergo18@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "aiogram (>=3.21.0,<4.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "aiogram-calendar (>=0.6.0,<0.7.0)",
    "faststream[rabbit] (>=0.6.2,<0.7.0)",
]

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8-pyproject = "^1.2.4"
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
pytest-dotenv = "^0.5.2"
pytest-mock = "^3.15.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
]
per-file-ignores = [
    "__init__.py:F401"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
env_files = [".env.test"]
